wip health variables lookup without indexes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -901,6 +901,7 @@ set(HEALTH_PLUGIN_FILES
         health/health_notifications.c
         health/health_event_loop.c
         health/health_dyncfg.c
+        health/health_variable.c
 )
 
 set(IDLEJITTER_PLUGIN_FILES collectors/idlejitter.plugin/plugin_idlejitter.c)
