--- a/.github/workflows/packaging.yml
+++ b/.github/workflows/packaging.yml
@@ -205,6 +205,24 @@ jobs:
         with:
           fetch-depth: 0 # We need full history for versioning
           submodules: recursive
+      - name: Set Sentry telemetry env vars
+        id: set-telemetry-env-vars
+        run: |
+          if [[ "${{ github.repository }}" == 'netdata/netdata' ]] && [[ "${{ matrix.bundle_sentry }}" == true ]]; then
+            if [[ "${{ github.event_name }}" == 'workflow_dispatch' ]] || [[ "${{ contains(github.event.pull_request.labels.*.name, 'run-ci/sentry-upload') }}" == "true" ]]; then
+              echo "BUILDING_ENVIRONMENT=Production" >> $GITHUB_ENV
+              echo "UPLOAD_SENTRY=true" >> $GITHUB_ENV
+            elif [[ "${{ github.event_name }}" == "pull_request" ]] && [[ "${{ contains(github.event.pull_request.labels.*.name, 'run-ci/sentry-upload') }}" == "true" ]]; then
+              echo "BUILDING_ENVIRONMENT=Development-CI" >> $GITHUB_ENV
+              echo "UPLOAD_SENTRY=true" >> $GITHUB_ENV
+            else
+              echo "BUILDING_ENVIRONMENT=Development" >> $GITHUB_ENV
+              echo "UPLOAD_SENTRY=false" >> $GITHUB_ENV
+            fi
+          else
+            echo "BUILDING_ENVIRONMENT=Unknown" >> $GITHUB_ENV
+            echo "UPLOAD_SENTRY=false" >> $GITHUB_ENV
+          fi
       - name: Setup QEMU
         id: qemu
         if: matrix.platform != 'linux/amd64' && matrix.platform != 'linux/i386' && needs.file-check.outputs.run == 'true'
@@ -233,6 +251,8 @@ jobs:
         shell: bash
         run: |
           docker run --security-opt seccomp=unconfined -e DISABLE_TELEMETRY=1 -e VERSION=${{ needs.version-check.outputs.version }} \
+                    -e ENABLE_SENTRY=${{matrix.enable_sentry}} -e BUILDING_ENVIRONMENT=${{env.BUILDING_ENVIRONMENT}} \
+                    -e SENTRY_AUTH_TOKEN=${{secrets.SENTRY_API}} -e BUILD_DESTINATION=${{ matrix.distro }}${{ matrix.version }}_${{ matrix.platform }} \
                      --platform=${{ matrix.platform }} -v "$PWD":/netdata netdata/package-builders:${{ matrix.distro }}${{ matrix.version }}-v1
       - name: Save Packages
         id: artifacts
