--- a/.github/data/distros.yml
+++ b/.github/data/distros.yml
@@ -34,6 +34,7 @@ include:
     support_type: Core
     notes: ''
     eol_check: true
+    bundle_sentry: false
   - <<: *alpine
     version: "3.18"
     support_type: Core
@@ -55,6 +56,7 @@ include:
     support_type: Intermediate
     notes: ''
     eol_check: false
+    bundle_sentry: false
     env_prep: |
       pacman --noconfirm -Syu && pacman --noconfirm -Sy grep libffi
     test:
@@ -66,6 +68,7 @@ include:
     support_type: Core
     notes: ''
     eol_check: 'amazon-linux'
+    bundle_sentry: false
     packages: &amzn_packages
       type: rpm
       repo_distro: amazonlinux/2
@@ -89,6 +92,7 @@ include:
     support_type: Core
     notes: ''
     eol_check: false
+    bundle_sentry: false
     packages:
       type: rpm
       repo_distro: el/7
@@ -110,6 +114,7 @@ include:
     jsonc_removal: |
       dnf remove -y json-c-devel
     eol_check: true
+    bundle_sentry: false
     packages: &cs_packages
       type: rpm
       repo_distro: el/c9s
@@ -172,6 +177,7 @@ include:
     support_type: Core
     notes: ''
     eol_check: true
+    bundle_sentry: false
     jsonc_removal: |
       dnf remove -y json-c-devel
     packages: &fedora_packages
@@ -196,6 +202,7 @@ include:
     support_type: Core
     notes: ''
     eol_check: true
+    bundle_sentry: false
     base_image: opensuse/leap:15.5
     jsonc_removal: |
       zypper rm -y libjson-c-devel
@@ -214,6 +221,7 @@ include:
     support_type: Core
     notes: ''
     eol_check: true
+    bundle_sentry: false
     jsonc_removal: |
       dnf remove -y json-c-devel
     packages: &oracle_packages
@@ -238,6 +246,7 @@ include:
     jsonc_removal: |
       dnf remove -y json-c-devel
     eol_check: true
+    bundle_sentry: false
     packages: &rocky_packages
       type: rpm
       repo_distro: el/9
@@ -266,6 +275,7 @@ include:
     support_type: Core
     notes: ''
     eol_check: true
+    bundle_sentry: false
     env_prep: |
       rm -f /etc/apt/apt.conf.d/docker && apt-get update
     jsonc_removal: |
@@ -297,11 +307,13 @@ include:
 legacy: # Info for platforms we used to support and still need to handle packages for
   - <<: *fedora
     version: "37"
+    bundle_sentry: false
     packages:
       <<: *fedora_packages
       repo_distro: fedora/37
   - <<: *opensuse
     version: "15.4"
+    bundle_sentry: false
     packages:
       <<: *opensuse_packages
       repo_distro: opensuse/15.4
