fix format, update README.md and change default option

--- a/exporting/exporting.conf
+++ b/exporting/exporting.conf
@@ -2,6 +2,7 @@
     enabled = no
     # send configured labels = yes
     # send automatic labels = no
+    # send internal labels = yes
     # update every = 10
 
 [prometheus:exporter]
@@ -9,6 +10,7 @@
     # send names instead of ids = yes
     # send configured labels = yes
     # send automatic labels = no
+    # send internal labels = yes
     # send charts matching = *
     # send hosts matching = localhost *
     # prefix = netdata
@@ -47,6 +49,8 @@
     # send charts matching = *
     # send hosts matching = localhost *
     # send variables = no
+    # send automatic labels = no
+    # send internal labels = yes
 
 # [kinesis:my_kinesis_instance]
     # enabled = no
