--- a/contrib/debian/rules
+++ b/contrib/debian/rules
@@ -37,6 +37,15 @@ HAVE_XENSTAT = 1
 XENSTAT_CONFIG = -DENABLE_PLUGIN_XENSTAT=On
 endif
 
+if [ -n "$ENABLE_SENTRY" ] && [ "$ENABLE_SENTRY" = "true" ]; then
+[ -z "$BUILDING_ENVIRONMENT" ] && BUILDING_ENVIRONMENT="Unknown"
+[ -z "$VERSION" ] && VERSION="Unknown"
+[ -z "$BUILD_DESTINATION" ] && BUILD_DESTINATION="Unknown"
+SENTRY_CONFIG = "-DENABLE_SENTRY=On -DNETDATA_SENTRY_ENVIRONMENT="${BUILDING_ENVIRONMENT} -DNETDATA_SENTRY_RELEASE="${VERSION} -DNETDATA_SENTRY_DIST="${BUILD_DESTINATION}"
+else
+SENTRY_CONFIG = "-DENABLE_SENTRY=Off"
+fi
+
 %:
 	dh $@ --builddirectory=$(BUILDDIR)
 
@@ -77,11 +86,8 @@ override_dh_auto_configure:
 		-DENABLE_EXPORTER_MONGODB=On \
 		-DENABLE_BUNDLED_PROTOBUF=Off \
 		-DENABLE_BUNDLED_JSONC=Off \
-		-DENABLE_BUNDLED_YAML=Off \
-		-DENABLE_SENTRY="${ENABLE_SENTRY}"" \
-		-DNETDATA_SENTRY_ENVIRONMENT="${BUILDING_ENVIRONMENT}" \
-		-DNETDATA_SENTRY_RELEASE="${VERSION}" \
-		-DNETDATA_SENTRY_DIST="${BUILD_DESTINATION}"
+		${SENTRY_CONFIG} \
+		-DENABLE_BUNDLED_YAML=Off
 
 override_dh_auto_test:
 	true
