NON mergeable change
Signed-off-by: Tasos Katsoulas <tasos@netdata.cloud>

--- a/contrib/debian/rules
+++ b/contrib/debian/rules
@@ -37,14 +37,14 @@ HAVE_XENSTAT = 1
 XENSTAT_CONFIG = -DENABLE_PLUGIN_XENSTAT=On
 endif
 
-if [ -n "$ENABLE_SENTRY" ] && [ "$ENABLE_SENTRY" = "true" ]; then
-[ -z "$BUILDING_ENVIRONMENT" ] && BUILDING_ENVIRONMENT="Unknown"
-[ -z "$VERSION" ] && VERSION="Unknown"
-[ -z "$BUILD_DESTINATION" ] && BUILD_DESTINATION="Unknown"
-SENTRY_CONFIG = "-DENABLE_SENTRY=On -DNETDATA_SENTRY_ENVIRONMENT="${BUILDING_ENVIRONMENT} -DNETDATA_SENTRY_RELEASE="${VERSION} -DNETDATA_SENTRY_DIST="${BUILD_DESTINATION}"
+ifeq ($(ENABLE_SENTRY),true)
+    BUILDING_ENVIRONMENT ?= Unknown
+    VERSION ?= Unknown
+    BUILD_DESTINATION ?= Unknown
+    SENTRY_CONFIG := -DENABLE_SENTRY=On -DNETDATA_SENTRY_ENVIRONMENT=$(BUILDING_ENVIRONMENT) -DNETDATA_SENTRY_RELEASE=$(VERSION) -DNETDATA_SENTRY_DIST=$(BUILD_DESTINATION)
 else
-SENTRY_CONFIG = "-DENABLE_SENTRY=Off"
-fi
+    SENTRY_CONFIG := -DENABLE_SENTRY=Off
+endif
 
 %:
 	dh $@ --builddirectory=$(BUILDDIR)
