Use breakpad backend

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,7 +62,7 @@ include(FetchContent)
 set(FETCHCONTENT_FULLY_DISCONNECTED Off)
 
 set(SENTRY_VERSION 0.6.6)
-set(SENTRY_BACKEND crashpad)
+set(SENTRY_BACKEND "breakpad")
 set(SENTRY_BUILD_SHARED_LIBS OFF)
 FetchContent_Declare(sentry URL https://github.com/getsentry/sentry-native/releases/download/${SENTRY_VERSION}/sentry-native.zip)
 FetchContent_MakeAvailable(sentry)
