--- a/config.cmake.h.in
+++ b/config.cmake.h.in
@@ -115,7 +115,7 @@
 #cmakedefine NETDATA_SENTRY_ENVIRONMENT "@NETDATA_SENTRY_ENVIRONMENT@"
 #cmakedefine NETDATA_SENTRY_RELEASE "@NETDATA_SENTRY_RELEASE@"
 #cmakedefine NETDATA_SENTRY_DIST "@NETDATA_SENTRY_DIST@"
-
+#cmakedefine NETDATA_SENTRY_DSN "@NETDATA_SENTRY_DSN@"
 // enabled bundling
 
 #cmakedefine ENABLE_BUNDLED_JSONC
