Modify sentry dif command

--- a/contrib/debian/rules
+++ b/contrib/debian/rules
@@ -99,7 +99,7 @@ override_dh_auto_test:
 
 override_dh_strip:
 	if [ "${ENABLE_SENTRY}" = "true" ] && [ "${UPLOAD_SENTRY}" = "true" ]; then
-		sentry-cli debug-files upload -o netdata-inc -p netdata-agent ${TOP}/usr/sbin/netdata
+		sentry-cli debug-files upload -o netdata-inc -p netdata-agent --log-level debug --include-sources ${TOP}/usr/sbin/netdata
 	fi
 	dh_strip
 
