added schema for alerts; separated alert_action_options from rrdr_options; restructured the json payload for alerts

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2438,6 +2438,7 @@ install(FILES
 
 install(FILES
         collectors/systemd-journal.plugin/schema.d/systemd-journal:monitored-directories.json
+        health/schema.d/health:alert:prototype.json
         DESTINATION usr/lib/netdata/conf.d/schema.d)
 
 #
