--- a/integrations/cloud-notifications/metadata.yaml
+++ b/integrations/cloud-notifications/metadata.yaml
@@ -402,10 +402,10 @@
       3. Click on the **+ Add configuration** button (near the top-right corner of your screen).
       4. On the **Microsoft Teams** card click on **+ Add**.
       5. A modal will be presented to you to enter the required details to enable the configuration:
-        * **Notification settings** are Netdata specific settings
-            - Configuration name - you can optionally provide a name for your configuration  you can easily refer to it/
+        * **Notification settings** are Netdata specific settings:
+            - Configuration name - you can optionally provide a name for your configuration  you can easily refer to it.
             - Rooms - by specifying a list of Rooms you are select to which nodes or areas of your infrastructure you want to be notified using this configuration.
-            - Notification - you specify which notifications you want to be notified using this configuration: All Alerts and unreachable, All Alerts, Critical only
+            - Notification - you specify which notifications you want to be notified using this configuration: All Alerts and unreachable, All Alerts, Critical only.
         * **Integration configuration** are the specific notification integration required settings, which vary by notification method. For Microsoft Teams:
             - Microsoft Teams Incoming Webhook URL - the _Incoming Webhook URL_ that was generated earlier.
 
