--- a/contrib/debian/rules
+++ b/contrib/debian/rules
@@ -76,7 +76,7 @@ override_dh_auto_configure:
 		-DENABLE_CLOUD=On \
 		-DENABLE_DBENGINE=On \
 		-DENABLE_H2O=On \
-		-DENABLE_ML=Off \
+		-DENABLE_ML=On \
 		-DENABLE_PLUGIN_APPS=On \
 		-DENABLE_PLUGIN_CGROUP_NETWORK=On \
 		-DENABLE_PLUGIN_DEBUGFS=On \
