Finalize CI changes
Signed-off-by: Tasos Katsoulas <tasos@netdata.cloud>

--- a/.github/data/distros.yml
+++ b/.github/data/distros.yml
@@ -137,7 +137,7 @@ include:
     notes: ''
     base_image: debian:bookworm
     eol_check: true
-    bundle_sentry: true
+    bundle_sentry: false
     env_prep: |
       apt-get update
     jsonc_removal: |
