--- a/contrib/debian/rules
+++ b/contrib/debian/rules
@@ -46,8 +46,7 @@ ifeq ($(ENABLE_SENTRY),true)
         -DNETDATA_SENTRY_ENVIRONMENT=$(RELEASE_PIPELINE) \
         -DNETDATA_SENTRY_RELEASE=$(VERSION) \
         -DNETDATA_SENTRY_DIST=$(BUILD_DESTINATION) \
-        -DNETDATA_SENTRY_DSN=$(SENTRY_DSN) \
-        -DCMAKE_BUILD_TYPE=Debug
+        -DNETDATA_SENTRY_DSN=$(SENTRY_DSN)
 else
     SENTRY_CONFIG := -DENABLE_SENTRY=Off
 endif
