move registry/ under src/

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1076,17 +1076,17 @@ if(ENABLE_DBENGINE)
 endif()
 
 set(REGISTRY_PLUGIN_FILES
-        registry/registry.c
-        registry/registry.h
-        registry/registry_db.c
-        registry/registry_init.c
-        registry/registry_internals.c
-        registry/registry_internals.h
-        registry/registry_log.c
-        registry/registry_machine.c
-        registry/registry_machine.h
-        registry/registry_person.c
-        registry/registry_person.h
+        src/registry/registry.c
+        src/registry/registry.h
+        src/registry/registry_db.c
+        src/registry/registry_init.c
+        src/registry/registry_internals.c
+        src/registry/registry_internals.h
+        src/registry/registry_log.c
+        src/registry/registry_machine.c
+        src/registry/registry_machine.h
+        src/registry/registry_person.c
+        src/registry/registry_person.h
 )
 
 set(STATSD_PLUGIN_FILES
