--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -663,7 +663,7 @@ set(LIBNETDATA_FILES
         src/libnetdata/os.c
         src/libnetdata/os.h
         src/libnetdata/simple_hashtable.h
-        src/libnetdata/endian.h
+        src/libnetdata/byteorder.h
         src/libnetdata/onewayalloc/onewayalloc.c
         src/libnetdata/onewayalloc/onewayalloc.h
         src/libnetdata/popen/popen.c
