--- a/.github/workflows/packaging.yml
+++ b/.github/workflows/packaging.yml
@@ -53,7 +53,7 @@ jobs:
             **.patch
             **.cmake
             netdata.spec.in
-            contrib/debian/**
+            debian/**
             CMakeLists.txt
             .github/data/distros.yml
             .github/workflows/packaging.yml
