Dir input pattern dont require globstar
Signed-off-by: Tasos Katsoulas <tasos@netdata.cloud>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,8 +53,8 @@ jobs:
             .github/scripts/get-static-cache-key.sh
             .github/scripts/gen-matrix-build.py
             .github/scripts/run-updater-check.sh
-            packaging/makeself/**
-            packaging/installer/**
+            packaging/makeself/
+            packaging/installer/
             packaging/*.sh
             packaging/*.version
             packaging/*.checksums
