--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -47,8 +47,8 @@ jobs:
             netdata-installer.sh
             .github/workflows/docker.yml
             .github/scripts/docker-test.sh
-            packaging/docker/**
-            packaging/installer/**
+            packaging/docker/
+            packaging/installer/
             packaging/runtime-check.sh
             packaging/*.version
             packaging/*.checksums
