Make sure that the ignored_files are honored first
Signed-off-by: Tasos Katsoulas <tasos@netdata.cloud>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -65,6 +65,7 @@ jobs:
           files_ignore: |
             netdata.spec.in
             **.md
+          negation_patterns_first: true
       - name: Check Run
         id: check-run
         run: |
