Print a list with all the files it matched
Signed-off-by: Tasos Katsoulas <tasos@netdata.cloud>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -65,6 +65,13 @@ jobs:
           files_ignore: |
             netdata.spec.in
             **/*.md
+      - name: List all changed files in pattern
+        env:
+          ALL_CHANGED_FILES: ${{ steps.check-files.outputs.all_changed_files }}
+        run: |
+          for file in ${ALL_CHANGED_FILES}; do
+            echo "$file was changed"
+          done
       - name: Check Run
         id: check-run
         run: |
