--- a/.github/workflows/packaging.yml
+++ b/.github/workflows/packaging.yml
@@ -68,6 +68,13 @@ jobs:
             web/server/h2o/libh2o/
           files_ignore: |
             **/*.md
+      - name: List all changed files in pattern
+        env:
+          ALL_CHANGED_FILES: ${{ steps.check-files.outputs.all_changed_files }}
+        run: |
+          for file in ${ALL_CHANGED_FILES}; do
+            echo "$file was changed"
+          done
       - name: Check Run
         id: check-run
         run: |
