Fix working in the step's name
Signed-off-by: Tasos Katsoulas <tasos@netdata.cloud>

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -53,7 +53,7 @@ jobs:
           files_ignore: |
             netdata.spec.in
             **/*.md
-      - name: List all changed files in pattern
+      - name: List all modified files in pattern
         env:
           ALL_MODIFIED_FILES: ${{ steps.check-files.outputs.all_modified_files }}
         run: |
