--- a/.github/workflows/packaging.yml
+++ b/.github/workflows/packaging.yml
@@ -68,7 +68,7 @@ jobs:
             web/server/h2o/libh2o/
           files_ignore: |
             **/*.md
-      - name: List all changed files in pattern
+      - name: List all modified files in pattern
         env:
           ALL_MODIFIED_FILES: ${{ steps.check-files.outputs.all_modified_files }}
         run: |
