--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -29,13 +29,13 @@ jobs:
         with:
           since_last_remote_commit: ${{ github.event_name != 'pull_request' }}
           files: |
-            **.c
-            **.cc
-            **.h
-            **.hh
-            **.in
-            **.patch
-            **.cmake
+            **/*.c
+            **/*.cc
+            **/*.h
+            **/*.hh
+            **/*.in
+            **/*.patch
+            **/*.cmake
             CMakeLists.txt
             .gitignore
             .github/data/distros.yml
