Revert "Apply suggestions from code review"
This reverts commit 57455d04c542e47fcfe2a84a4e86802447088629.

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -61,7 +61,7 @@ jobs:
             **/*.md
       - name: List all modified files in pattern
         env:
-          ALL_MODIFIED_FILES: ${{ steps.check-files.outputs.any_modified }}
+          ALL_MODIFIED_FILES: ${{ steps.check-files.outputs.all_modified_files }}
         run: |
           for file in ${ALL_MODIFIED_FILES}; do
             echo "$file was modified"
