--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -62,9 +62,9 @@ jobs:
       - name: List all changed files in pattern
         continue-on-error: true
         env:
-          ALL_MODIFIED_FILES: ${{ steps.check-files.outputs.all_changed_files }}
+          ALL_CHANGED_FILES: ${{ steps.check-files.outputs.all_changed_files }}
         run: |
-          for file in ${ALL_changed_FILES}; do
+          for file in ${ALL_CHANGED_FILES}; do
             echo "$file was changed"
           done
       - name: Check Run
